# chatbot_vs

./: BMSTU_Chatbot_2sem  CMakeLists.txt  Headers.h  Makefile  README.me  build_and_run.sh  build_and_run_manually.sh  compile.sh  del.txt
src/: main.cpp
src/Entity/history/: History.cpp  History.h
src/Entity/parent/: Client.h
src/Entity/qa/: QA.cpp  QA.h
src/Entity/user/: User.cpp  User.h
src/Menu/: Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h
src/auth/: AuthManager.cpp  AuthManager.h
src/customized/: MyGenericVector.h
src/exception/service/: QANotFoundException.h  ServiceConnectionException.h  ServiceDataException.h
src/helpers/mappers/history/: HistoryMapper.cpp  HistoryMapper.h
src/helpers/mappers/qa/: QAMapper.cpp  QAMapper.h
src/helpers/mappers/user/: UserMapper.cpp  UserMapper.h
src/helpers/utils/: Utilities.cpp  Utilities.h
src/service/: BaseService.h
src/service/history/: HistoryService.cpp  HistoryService.h
src/service/qa/: QAService.cpp  QAService.h
src/service/user/: UserService.cpp  UserService.h
static/Database/: QA.txt  users.txt
static/Database/history/: User1@gmail.com  noriksaroyan@gmail.com
